// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonTemplate match snapshot 1`] = `
Array [
  Object {
    "node": <ButtonTemplate
      buttons={
        Array [
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />,
          <PostbackButton
            payload="_MORE_"
            title="more"
          />,
          <CallButton
            number="+12345678"
            title="call us"
          />,
        ]
      }
    >
      hello button template
    </ButtonTemplate>,
    "path": "$::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": Array [
              Object {
                "fallback_url": undefined,
                "messenger_extensions": undefined,
                "title": "check",
                "type": "web_url",
                "url": "http://xxx.yy.z",
                "webview_height_ratio": undefined,
                "webview_share_button": undefined,
              },
              Object {
                "payload": "_MORE_",
                "title": "more",
                "type": "postback",
              },
              Object {
                "number": "+12345678",
                "title": "call us",
                "type": "phone_number",
              },
            ],
            "sharable": undefined,
            "template_type": "button",
            "text": "hello button template",
          },
          "type": "template",
        },
      },
    },
  },
  Object {
    "node": <ButtonTemplate
      buttons={
        Array [
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />,
          <PostbackButton
            payload="_MORE_"
            title="more"
          />,
          <CallButton
            number="+12345678"
            title="call us"
          />,
        ]
      }
      sharable={true}
    >
      <i>
        foo
      </i>
      <b>
        bar
      </b>
      <del>
        baz
      </del>
    </ButtonTemplate>,
    "path": "$::1",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": Array [
              Object {
                "fallback_url": undefined,
                "messenger_extensions": undefined,
                "title": "check",
                "type": "web_url",
                "url": "http://xxx.yy.z",
                "webview_height_ratio": undefined,
                "webview_share_button": undefined,
              },
              Object {
                "payload": "_MORE_",
                "title": "more",
                "type": "postback",
              },
              Object {
                "number": "+12345678",
                "title": "call us",
                "type": "phone_number",
              },
            ],
            "sharable": true,
            "template_type": "button",
            "text": "foobarbaz",
          },
          "type": "template",
        },
      },
    },
  },
]
`;

exports[`GenericTemplate match snapshot 1`] = `
Array [
  Object {
    "node": <GenericTemplate>
      <GenericItem
        buttons={
          Array [
            <URLButton
              title="check"
              url="http://xxx.yy.z"
            />,
          ]
        }
        imageURL="http://foo.bar/image"
        title="foo"
      />
      <GenericItem
        buttons={
          Array [
            <URLButton
              title="check"
              url="http://xxx.yy.z"
            />,
            <PostbackButton
              payload="_MORE_"
              title="more"
            />,
            <CallButton
              number="+12345678"
              title="call us"
            />,
          ]
        }
        defaultAction={
          <URLButton
            title="TITLE!"
            url="http://foo.bar/"
          />
        }
        imageURL="http://foo.bar/image"
        subtitle="bar"
        title="foo"
      />
    </GenericTemplate>,
    "path": "$::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "elements": Array [
              Object {
                "buttons": Array [
                  Object {
                    "fallback_url": undefined,
                    "messenger_extensions": undefined,
                    "title": "check",
                    "type": "web_url",
                    "url": "http://xxx.yy.z",
                    "webview_height_ratio": undefined,
                    "webview_share_button": undefined,
                  },
                ],
                "default_action": undefined,
                "image_url": "http://foo.bar/image",
                "subtitle": undefined,
                "title": "foo",
              },
              Object {
                "buttons": Array [
                  Object {
                    "fallback_url": undefined,
                    "messenger_extensions": undefined,
                    "title": "check",
                    "type": "web_url",
                    "url": "http://xxx.yy.z",
                    "webview_height_ratio": undefined,
                    "webview_share_button": undefined,
                  },
                  Object {
                    "payload": "_MORE_",
                    "title": "more",
                    "type": "postback",
                  },
                  Object {
                    "number": "+12345678",
                    "title": "call us",
                    "type": "phone_number",
                  },
                ],
                "default_action": Object {
                  "fallback_url": undefined,
                  "messenger_extensions": undefined,
                  "type": "web_url",
                  "url": "http://foo.bar/",
                  "webview_height_ratio": undefined,
                  "webview_share_button": undefined,
                },
                "image_url": "http://foo.bar/image",
                "subtitle": "bar",
                "title": "foo",
              },
            ],
            "image_aspect_ratio": undefined,
            "sharable": undefined,
            "template_type": "generic",
          },
          "type": "template",
        },
      },
    },
  },
  Object {
    "node": <GenericTemplate
      imageAspectRatio="square"
      sharable={true}
    >
      <GenericItem
        buttons={
          Array [
            <URLButton
              title="check"
              url="http://xxx.yy.z"
            />,
          ]
        }
        imageURL="http://foo.bar/image"
        title="foo"
      />
      <GenericItem
        buttons={
          Array [
            <URLButton
              title="check"
              url="http://xxx.yy.z"
            />,
            <PostbackButton
              payload="_MORE_"
              title="more"
            />,
            <CallButton
              number="+12345678"
              title="call us"
            />,
          ]
        }
        defaultAction={
          <URLButton
            title="TITLE!"
            url="http://foo.bar/"
          />
        }
        imageURL="http://foo.bar/image"
        subtitle="bar"
        title="foo"
      />
    </GenericTemplate>,
    "path": "$::1",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "elements": Array [
              Object {
                "buttons": Array [
                  Object {
                    "fallback_url": undefined,
                    "messenger_extensions": undefined,
                    "title": "check",
                    "type": "web_url",
                    "url": "http://xxx.yy.z",
                    "webview_height_ratio": undefined,
                    "webview_share_button": undefined,
                  },
                ],
                "default_action": undefined,
                "image_url": "http://foo.bar/image",
                "subtitle": undefined,
                "title": "foo",
              },
              Object {
                "buttons": Array [
                  Object {
                    "fallback_url": undefined,
                    "messenger_extensions": undefined,
                    "title": "check",
                    "type": "web_url",
                    "url": "http://xxx.yy.z",
                    "webview_height_ratio": undefined,
                    "webview_share_button": undefined,
                  },
                  Object {
                    "payload": "_MORE_",
                    "title": "more",
                    "type": "postback",
                  },
                  Object {
                    "number": "+12345678",
                    "title": "call us",
                    "type": "phone_number",
                  },
                ],
                "default_action": Object {
                  "fallback_url": undefined,
                  "messenger_extensions": undefined,
                  "type": "web_url",
                  "url": "http://foo.bar/",
                  "webview_height_ratio": undefined,
                  "webview_share_button": undefined,
                },
                "image_url": "http://foo.bar/image",
                "subtitle": "bar",
                "title": "foo",
              },
            ],
            "image_aspect_ratio": "square",
            "sharable": true,
            "template_type": "generic",
          },
          "type": "template",
        },
      },
    },
  },
]
`;

exports[`ListTemplate match snapshot 1`] = `
Array [
  Object {
    "node": <ListTemplate>
      <GenericItem
        buttons={
          Array [
            <URLButton
              title="check"
              url="http://xxx.yy.z"
            />,
          ]
        }
        imageURL="http://foo.bar/image"
        title="foo"
      />
      <GenericItem
        buttons={
          Array [
            <PostbackButton
              payload="_MORE_"
              title="more"
            />,
          ]
        }
        defaultAction={
          <URLButton
            title="TITLE!"
            url="http://foo.bar/"
          />
        }
        imageURL="http://foo.bar/image"
        subtitle="bar"
        title="foo"
      />
    </ListTemplate>,
    "path": "$::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": undefined,
            "elements": Array [
              Object {
                "buttons": Array [
                  Object {
                    "fallback_url": undefined,
                    "messenger_extensions": undefined,
                    "title": "check",
                    "type": "web_url",
                    "url": "http://xxx.yy.z",
                    "webview_height_ratio": undefined,
                    "webview_share_button": undefined,
                  },
                ],
                "default_action": undefined,
                "image_url": "http://foo.bar/image",
                "subtitle": undefined,
                "title": "foo",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": "_MORE_",
                    "title": "more",
                    "type": "postback",
                  },
                ],
                "default_action": Object {
                  "fallback_url": undefined,
                  "messenger_extensions": undefined,
                  "type": "web_url",
                  "url": "http://foo.bar/",
                  "webview_height_ratio": undefined,
                  "webview_share_button": undefined,
                },
                "image_url": "http://foo.bar/image",
                "subtitle": "bar",
                "title": "foo",
              },
            ],
            "sharable": undefined,
            "template_type": "list",
            "top_element_style": undefined,
          },
          "type": "template",
        },
      },
    },
  },
  Object {
    "node": <ListTemplate
      button={
        <PostbackButton
          payload="_MORE_"
          title="more"
        />
      }
      imageAspectRatio="square"
      sharable={true}
    >
      <GenericItem
        buttons={
          Array [
            <URLButton
              title="check"
              url="http://xxx.yy.z"
            />,
          ]
        }
        imageURL="http://foo.bar/image"
        title="foo"
      />
      <GenericItem
        buttons={
          Array [
            <PostbackButton
              payload="_MORE_"
              title="more"
            />,
          ]
        }
        defaultAction={
          <URLButton
            title="TITLE!"
            url="http://foo.bar/"
          />
        }
        imageURL="http://foo.bar/image"
        subtitle="bar"
        title="foo"
      />
    </ListTemplate>,
    "path": "$::1",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": Array [
              Object {
                "payload": "_MORE_",
                "title": "more",
                "type": "postback",
              },
            ],
            "elements": Array [
              Object {
                "buttons": Array [
                  Object {
                    "fallback_url": undefined,
                    "messenger_extensions": undefined,
                    "title": "check",
                    "type": "web_url",
                    "url": "http://xxx.yy.z",
                    "webview_height_ratio": undefined,
                    "webview_share_button": undefined,
                  },
                ],
                "default_action": undefined,
                "image_url": "http://foo.bar/image",
                "subtitle": undefined,
                "title": "foo",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": "_MORE_",
                    "title": "more",
                    "type": "postback",
                  },
                ],
                "default_action": Object {
                  "fallback_url": undefined,
                  "messenger_extensions": undefined,
                  "type": "web_url",
                  "url": "http://foo.bar/",
                  "webview_height_ratio": undefined,
                  "webview_share_button": undefined,
                },
                "image_url": "http://foo.bar/image",
                "subtitle": "bar",
                "title": "foo",
              },
            ],
            "sharable": true,
            "template_type": "list",
            "top_element_style": undefined,
          },
          "type": "template",
        },
      },
    },
  },
]
`;

exports[`MediaTemplate match snapshot 1`] = `
Array [
  Object {
    "node": <MediaTemplate
      buttons={
        Array [
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />,
          <PostbackButton
            payload="_MORE_"
            title="more"
          />,
          <CallButton
            number="+12345678"
            title="call us"
          />,
        ]
      }
      type="image"
      url="http://..."
    />,
    "path": "$::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "elements": Array [
              Object {
                "attachment_id": undefined,
                "buttons": Array [
                  Object {
                    "fallback_url": undefined,
                    "messenger_extensions": undefined,
                    "title": "check",
                    "type": "web_url",
                    "url": "http://xxx.yy.z",
                    "webview_height_ratio": undefined,
                    "webview_share_button": undefined,
                  },
                  Object {
                    "payload": "_MORE_",
                    "title": "more",
                    "type": "postback",
                  },
                  Object {
                    "number": "+12345678",
                    "title": "call us",
                    "type": "phone_number",
                  },
                ],
                "media_type": "image",
                "url": "http://...",
              },
            ],
            "sharable": undefined,
            "template_type": "media",
          },
          "type": "template",
        },
      },
    },
  },
  Object {
    "node": <MediaTemplate
      attachmentId="__ID__"
      buttons={
        Array [
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />,
          <PostbackButton
            payload="_MORE_"
            title="more"
          />,
          <CallButton
            number="+12345678"
            title="call us"
          />,
        ]
      }
      sharable={true}
      type="video"
    />,
    "path": "$::1",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "elements": Array [
              Object {
                "attachment_id": "__ID__",
                "buttons": Array [
                  Object {
                    "fallback_url": undefined,
                    "messenger_extensions": undefined,
                    "title": "check",
                    "type": "web_url",
                    "url": "http://xxx.yy.z",
                    "webview_height_ratio": undefined,
                    "webview_share_button": undefined,
                  },
                  Object {
                    "payload": "_MORE_",
                    "title": "more",
                    "type": "postback",
                  },
                  Object {
                    "number": "+12345678",
                    "title": "call us",
                    "type": "phone_number",
                  },
                ],
                "media_type": "video",
                "url": undefined,
              },
            ],
            "sharable": true,
            "template_type": "media",
          },
          "type": "template",
        },
      },
    },
  },
]
`;

exports[`OpenGraphTemplate match snapshot 1`] = `
Array [
  Object {
    "node": <OpenGraphTemplate
      buttons={
        Array [
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />,
          <PostbackButton
            payload="_MORE_"
            title="more"
          />,
          <CallButton
            number="+12345678"
            title="call us"
          />,
        ]
      }
      url="http://..."
    />,
    "path": "$::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "elements": Array [
              Object {
                "buttons": Array [
                  Object {
                    "fallback_url": undefined,
                    "messenger_extensions": undefined,
                    "title": "check",
                    "type": "web_url",
                    "url": "http://xxx.yy.z",
                    "webview_height_ratio": undefined,
                    "webview_share_button": undefined,
                  },
                  Object {
                    "payload": "_MORE_",
                    "title": "more",
                    "type": "postback",
                  },
                  Object {
                    "number": "+12345678",
                    "title": "call us",
                    "type": "phone_number",
                  },
                ],
                "url": "http://...",
              },
            ],
            "sharable": undefined,
            "template_type": "open_graph",
          },
          "type": "template",
        },
      },
    },
  },
  Object {
    "node": <OpenGraphTemplate
      sharablebuttons={
        Array [
          <URLButton
            title="check"
            url="http://xxx.yy.z"
          />,
          <PostbackButton
            payload="_MORE_"
            title="more"
          />,
          <CallButton
            number="+12345678"
            title="call us"
          />,
        ]
      }
      url="http://..."
    />,
    "path": "$::1",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "elements": Array [
              Object {
                "buttons": undefined,
                "url": "http://...",
              },
            ],
            "sharable": undefined,
            "template_type": "open_graph",
          },
          "type": "template",
        },
      },
    },
  },
]
`;

exports[`ReceiptTemplate match snapshot 1`] = `
Array [
  Object {
    "node": <ReceiptTemplate
      currency="USD"
      orderNumber="12345"
      orderURL="http://what.a.shop"
      paymentMethod="Visa 2345"
      recipientName="John Doe"
      summary={
        Object {
          "total_cost": 56.14,
        }
      }
    />,
    "path": "$::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "address": undefined,
            "adjustments": undefined,
            "currency": "USD",
            "elements": undefined,
            "merchant_name": undefined,
            "order_number": "12345",
            "order_url": "http://what.a.shop",
            "payment_method": "Visa 2345",
            "recipient_name": "John Doe",
            "sharable": undefined,
            "summary": Object {
              "total_cost": 56.14,
            },
            "template_type": "receipt",
            "timestamp": undefined,
          },
          "type": "template",
        },
      },
    },
  },
  Object {
    "node": <ReceiptTemplate
      currency="USD"
      orderNumber="12345"
      orderURL="http://what.a.shop"
      paymentMethod="Visa 2345"
      recipientName="John Doe"
      summary={
        Object {
          "total_cost": 56.14,
        }
      }
    >
      <ReceiptItem
        price={9.99}
        title="Buzz Lightyear"
      />
      <ReceiptItem
        price={9.99}
        title="Woody"
      />
      <ReceiptItem
        price={9.99}
        title="Slinky Dog"
      />
    </ReceiptTemplate>,
    "path": "$::1",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "address": undefined,
            "adjustments": undefined,
            "currency": "USD",
            "elements": Array [
              Object {
                "currency": undefined,
                "image_url": undefined,
                "price": 9.99,
                "quantity": undefined,
                "subtitle": undefined,
                "title": "Buzz Lightyear",
              },
              Object {
                "currency": undefined,
                "image_url": undefined,
                "price": 9.99,
                "quantity": undefined,
                "subtitle": undefined,
                "title": "Woody",
              },
              Object {
                "currency": undefined,
                "image_url": undefined,
                "price": 9.99,
                "quantity": undefined,
                "subtitle": undefined,
                "title": "Slinky Dog",
              },
            ],
            "merchant_name": undefined,
            "order_number": "12345",
            "order_url": "http://what.a.shop",
            "payment_method": "Visa 2345",
            "recipient_name": "John Doe",
            "sharable": undefined,
            "summary": Object {
              "total_cost": 56.14,
            },
            "template_type": "receipt",
            "timestamp": undefined,
          },
          "type": "template",
        },
      },
    },
  },
  Object {
    "node": <ReceiptTemplate
      address={
        Object {
          "city": "Menlo Park",
          "country": "US",
          "postal_code": "94025",
          "state": "CA",
          "street_1": "1 Hacker Way",
          "street_2": "Somewhere...",
        }
      }
      adjustments={
        Array [
          Object {
            "amount": 20,
            "name": "New Customer Discount",
          },
          Object {
            "amount": 10,
            "name": "$10 Off Coupon",
          },
        ]
      }
      currency="USD"
      merchantName="AI"
      orderNumber="12345"
      orderURL="http://what.a.shop"
      paymentMethod="Visa 2345"
      recipientName="John Doe"
      sharable={true}
      summary={
        Object {
          "shipping_cost": 4.95,
          "subtotal": 75,
          "total_cost": 56.14,
          "total_tax": 6.19,
        }
      }
      timestamp="1428444852"
    >
      <ReceiptItem
        currency="USD"
        imageURL="http://i.robot/avatar"
        price={99.99}
        quantity={999}
        subtitle="It's real!"
        title="A robot!"
      />
    </ReceiptTemplate>,
    "path": "$::2",
    "type": "unit",
    "value": Object {
      "message": Object {
        "attachment": Object {
          "payload": Object {
            "address": Object {
              "city": "Menlo Park",
              "country": "US",
              "postal_code": "94025",
              "state": "CA",
              "street_1": "1 Hacker Way",
              "street_2": "Somewhere...",
            },
            "adjustments": Array [
              Object {
                "amount": 20,
                "name": "New Customer Discount",
              },
              Object {
                "amount": 10,
                "name": "$10 Off Coupon",
              },
            ],
            "currency": "USD",
            "elements": Array [
              Object {
                "currency": "USD",
                "image_url": "http://i.robot/avatar",
                "price": 99.99,
                "quantity": 999,
                "subtitle": "It's real!",
                "title": "A robot!",
              },
            ],
            "merchant_name": "AI",
            "order_number": "12345",
            "order_url": "http://what.a.shop",
            "payment_method": "Visa 2345",
            "recipient_name": "John Doe",
            "sharable": true,
            "summary": Object {
              "shipping_cost": 4.95,
              "subtotal": 75,
              "total_cost": 56.14,
              "total_tax": 6.19,
            },
            "template_type": "receipt",
            "timestamp": "1428444852",
          },
          "type": "template",
        },
      },
    },
  },
]
`;
